force-app/main/default/objects/Contact/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <formula>CreatedBy.FirstName + ' ' +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved By</label>
    <type>Text</type>
</CustomField>