force-app/main/default/objects/Contact/fields/ApprovedOn__c.field-meta.xml
<CustomField>
    <fullName>ApprovedOn__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved On</label>
    <type>Date</type>
</CustomField>