force-app/main/default/objects/Contact/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <description>Id assigned to employee by business</description>
    <label>Employee Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>