force-app/main/default/objects/Contact/fields/IdentityVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>IdentityVerificationStatus__c</fullName>
    <description>to store ID verification status</description>
    <label>Identity Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>