force-app/main/default/objects/Contact/fields/IsEmailVerified__c.field-meta.xml
<CustomField>
    <fullName>IsEmailVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if customer email is verified</description>
    <label>IsEmailVerified</label>
    <type>Checkbox</type>
</CustomField>