force-app/main/default/objects/Contact/fields/IsPhoneNumberVerified__c.field-meta.xml
<CustomField>
    <fullName>IsPhoneNumberVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if customer phone number is verified</description>
    <label>IsPhoneNumberVerified</label>
    <type>Checkbox</type>
</CustomField>