force-app/main/default/objects/Contact/fields/KYCStatus__c.field-meta.xml
<CustomField>
    <fullName>KYCStatus__c</fullName>
    <description>KYC verification status</description>
    <label>KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>