force-app/main/default/objects/Contact/fields/LastFourDigitSSN__c.field-meta.xml
<CustomField>
    <fullName>LastFourDigitSSN__c</fullName>
    <description>Last 4-Digits of SSN or Tax ID</description>
    <formula>RIGHT(SSN__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSN/Tax ID (Last Four Digits)</label>
    <type>Text</type>
</CustomField>