force-app/main/default/objects/Contact/fields/MemberNumber__c.field-meta.xml
<CustomField>
    <fullName>MemberNumber__c</fullName>
    <description>Customer number is he is an existing customer</description>
    <label>Member Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>