force-app/main/default/objects/Contact/fields/QualifileDecision__c.field-meta.xml
<CustomField>
    <fullName>QualifileDecision__c</fullName>
    <description>To store qualifile decision.</description>
    <label>Qualifile Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>