force-app/main/default/objects/Contact/fields/RunWithKIQ__c.field-meta.xml
<CustomField>
    <fullName>RunWithKIQ__c</fullName>
    <description>To store Run with KIQ result</description>
    <label>Run With KIQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>