force-app/main/default/objects/Contact/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description
  >Social Security number (SSN) is issued by the Social Security Administration</description>
    <label>SSN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>