force-app/main/default/objects/Contact/fields/SSNValidation__c.field-meta.xml
<CustomField>
    <fullName>SSNValidation__c</fullName>
    <description>To store SSN Validation result</description>
    <label>SSN Validation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>