force-app/main/default/objects/Contact/fields/UserContactType__c.field-meta.xml
<CustomField>
    <fullName>UserContactType__c</fullName>
    <description
  >Field is used to indicate the contact belong to which user type</description>
    <inlineHelpText
  >Field is used to indicate the contact belong to which user type</inlineHelpText>
    <label>User Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FinancialInstituteEmployee</fullName>
                <label>Financial Institute Employee</label>
            </value>
            <value>
                <fullName>DealerEmployee</fullName>
                <label>Dealer Employee</label>
            </value>
            <value>
                <fullName>DealerAdmin</fullName>
                <label>Dealer Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>